--- a/im.css
+++ b/im.css
@@ -123,7 +123,7 @@ body{
     line-height: 1.3;
     width: 90%;
     font-size: 4vw;
-    color: #dadada69;
+    color: #ffffff;
 }
 #page2>h3{
     font-style: italic;
